<resources>
    <string name="app_name">CastToTv</string>
    <string name="title_activity_dashbaord">DashbaordActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cast To Tv</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_recent_videos">Recent Videos</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_screen_mirroring">Screen Mirroring</string>
    <string name="menu_iptv">IPTV</string>

    <string name="menu_video">Video</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_audio">Audio</string>

    <string name="menu_google_drive">Google Drive</string>
    <string name="menu_google_photo">Google Photos</string>

    <string name="menu_web">Web</string>
    <string name="menu_history">History</string>
    <string name="menu_bookmark">Bookmarks</string>

    <string name="menu_premium">Premium</string>
    <string name="menu_help">Help</string>
    <string name="menu_feeedback">Feedback</string>
    <string name="menu_setting">Settings</string>
</resources>