<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.HomeFragment" >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="20dp"

        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"

                android:gravity="center"
                android:orientation="vertical"
                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@drawable/circlebackgroung"
                    android:src="@drawable/video"
                    android:padding="10dp"
                    android:tint="@color/white"
                    android:backgroundTint="@color/orange_red"

                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_video"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical"
                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@drawable/circlebackgroung"
                    android:src="@drawable/ic_outline_photo_size_select_actual_24"
                    android:padding="10dp"
                    android:tint="@color/white"
                    android:backgroundTint="@color/greenish"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_photo"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical"
                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@drawable/circlebackgroung"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_audiotrack_24"
                    android:tint="@color/white"
                    android:backgroundTint="@color/bluish"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_audio"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>